--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
@@ -9,23 +10,21 @@
 
         <div class="container">
             <!-- update results while typing, ignore enter key -->
+            <label for="searchform">Movie Title</label>
             <form id="searchform" onkeyup="search()" onsubmit="return false">
-                <label for="searchbar">search</label>
-                <input type="text" id="searchbar" placeholder="search...">
+                <input type="text" id="searchbar" placeholder="Search">
             </form>
         </div>
-        <br>
-        <div class="container">
-            <ul id='nominations'>Nominations
-            </ul>
+        <div class="flex-box">
+            <div class="container inline">
+                <a id="searchLabel">Results for ""</a>
+                <ul id="results"></ul>
+            </div>
+            
+            <div class="container inline">
+                Nominations
+                <ul id="nominations"></ul>
+            </div>
         </div>
-        <br>
-        <div class="container">
-            results
-            <button>remove</button>
-        </div>
-        <br>
-        <ul id='results'></ul>
-        <code id="response" class="container"></code>
     </body>
 </html>
