--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta name="title" property="og:title" content="Shopify Challenge">
+        <meta name="description" property="og:description" content="Website made for the Frontend Shopify Challenge.">
+        <meta name="author" content="Alina Kravchenko">
+        <title>Shopify Challenge (Front-End)</title>
+        <link rel="icon" href="https://raw.githubusercontent.com/kravchenkoalina/kravchenkoalina.github.io/master/media/favicon.ico">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
         <script type="text/javascript" src="script.js"></script>
