added titles and og content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" property="og:description" content="Website made for the Frontend Shopify Challenge.">
         <meta name="author" content="Alina Kravchenko">
         <title>Shopify Challenge (Front-End)</title>
-        <link rel="icon" href="https://raw.githubusercontent.com/kravchenkoalina/kravchenkoalina.github.io/master/media/favicon.ico">
+        <link rel="icon" href="https://cdn.shopify.com/assets/images/logos/shopify-bag.png">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
         <script type="text/javascript" src="script.js"></script>
